fixed position of homepage elements on mobile view

--- a/style.css
+++ b/style.css
@@ -36,15 +36,14 @@
     position: relative;
     overflow-y: hidden;
     overflow-x: hidden;
-    min-height: 500px;
   }
 
 .title {
-    height: 15%;
+    height: 140px;
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 15%;
+    top: 140px;
     transform: translate(-50%, -50%);
     color: black;
     overflow: hidden;
@@ -53,10 +52,10 @@
 }
 
 .prompt_form {
-    height: 25%;
+    height: 160px;
     width: 85%;
     text-align: center;
-    top: 35%;
+    top: 300px;
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
@@ -67,18 +66,18 @@
 
 .btn {
     padding: 6px 12px; !important
-font-size: 20px; !important
-border-radius: 10px; !important
-width: 50%;
+    font-size: 20px; !important
+    border-radius: 10px; !important
+    width: 50%;
 }
 
 .gallery {
-    top: 35%;
+    top: 360px;
     height: 65%;
     width: 100%;
     left: 0;
     position: absolute;
-    display: flex;
+    display: inline-flex;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
@@ -86,13 +85,13 @@ width: 50%;
 }
 
 .gallery-overlay {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .gallery-buttons {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
 }
 
@@ -131,9 +130,8 @@ width: 50%;
     float: left;
     box-shadow: 2px 2px 4px black;
     border-top-right-radius: 4px;
-    vertical-align: bottom;
     margin: 10px;
-    display: inline-block;
+    display: inline-flex;
     white-space: nowrap;
 }
 
